<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_top_corners"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddExerciseFragment">

    <AutoCompleteTextView
        android:id="@+id/auto_complete_select_exercise"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:hint="@string/select_exercise"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/txt_grey"
        android:background="@drawable/text_field_shape"
        android:paddingStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_and"
        tools:ignore="RtlSymmetry"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_view_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/auto_complete_select_exercise"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/and"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_add_weight"/>

    <EditText
        android:id="@+id/edit_text_add_weight"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:hint="@string/add_weight"
        android:textAlignment="center"
        android:textColorHint="@color/txt_grey"
        android:background="@drawable/text_field_shape"
        android:paddingStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_and"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_add_quantity"
        tools:ignore="RtlSymmetry"
        android:autofillHints="login"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_text_add_quantity"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:hint="@string/add_quantity"
        android:textAlignment="center"
        android:textColorHint="@color/txt_grey"
        android:background="@drawable/text_field_shape"
        android:paddingStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_weight"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_add_series"
        tools:ignore="RtlSymmetry"
        android:autofillHints="login"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_text_add_series"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:hint="@string/add_series"
        android:textAlignment="center"
        android:textColorHint="@color/txt_grey"
        android:background="@drawable/text_field_shape"
        android:paddingStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_quantity"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        tools:ignore="RtlSymmetry"
        android:autofillHints="login"
        android:inputType="number" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:id="@+id/button_add"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:text="@string/add"
        android:fontFamily="@font/poppins_regular"
        android:textSize="20sp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/txt_color_1"
        android:backgroundTint="@color/secondary_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>