<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainOptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_todays_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_todays_workout"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    tools:ignore="ContentDescription"
                    android:scaleType="centerCrop"
                    android:src="@drawable/todays_workout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/text_view_todays_workout"/>

                <TextView
                    android:id="@+id/text_view_todays_workout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todays_workout"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="24sp"
                    android:textColor="@color/txt_color_1"
                    app:layout_constraintTop_toBottomOf="@id/image_view_todays_workout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_your_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_your_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    tools:ignore="ContentDescription"
                    android:scaleType="centerCrop"
                    android:src="@drawable/your_progress"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/text_view_your_progress"/>

                <TextView
                    android:id="@+id/text_view_your_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_progress"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="24sp"
                    android:textColor="@color/txt_color_1"
                    app:layout_constraintTop_toBottomOf="@id/image_view_your_progress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_training_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_training_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    tools:ignore="ContentDescription"
                    android:scaleType="centerCrop"
                    android:src="@drawable/training_plan"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/text_view_training_plan"/>

                <TextView
                    android:id="@+id/text_view_training_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/training_plan"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="24sp"
                    android:textColor="@color/txt_color_1"
                    app:layout_constraintTop_toBottomOf="@id/image_view_training_plan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_all_workouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_all_workouts"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    tools:ignore="ContentDescription"
                    android:scaleType="centerCrop"
                    android:src="@drawable/all_workouts"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/text_view_all_workouts"/>

                <TextView
                    android:id="@+id/text_view_all_workouts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_workouts"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="24sp"
                    android:textColor="@color/txt_color_1"
                    app:layout_constraintTop_toBottomOf="@id/image_view_all_workouts"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>